vivi: add custom mmio dev for test

--- a/hw/misc/meson.build
+++ b/hw/misc/meson.build
@@ -141,3 +141,5 @@ softmmu_ss.add(when: 'CONFIG_SBSA_REF', if_true: files('sbsa_ec.c'))
 
 # HPPA devices
 softmmu_ss.add(when: 'CONFIG_LASI', if_true: files('lasi.c'))
+
+softmmu_ss.add(when: 'CONFIG_VIVI_DEV', if_true: files('vivi_dev.c'))
